# ein

./: .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  TODO.md  bench_isa_spike_pypy.sh  bench_lattice_pypy.sh  bench_solve_monotonic_pypy.sh  bench_solve_pypy.sh  clustered.dot  conditions.txt  cy_72_22_12_10.html  digraph_urlencode.py  ein_pypy.sh  inference_square.dot  inference_triangle.dot  link_label.dot  link_type.dot  linked.dot  multiple_link_types.dot  pyproject.toml  pytest.ini  reasoning.py  run_tests.sh  single_attribute_constraint.dot  test_bench_monotonic_pypy.sh  venv_install.sh
docs/: ir.md
ein.py/: pyproject.toml  whitelist_vulture.py
ein.py/acceptance/: test_bench_solve_mode.py  test_mode_consistency.py  test_zebra_three_classes.py
ein.py/demo/: bench_lattice.py  bench_monotonic.py  bench_saturate.py  bench_solve.py  bench_symmetric.py  measure_match_skips.py  measure_redundant_firings.py  probe_blind_fixture.py  probe_solution_nodes.py  profile_solve.py  relation_algebra_examples.py  s1_5b_32_measure.py  score_hypotheses.py  spike_isa_pruning.py  trace_relevance.py
ein.py/src/ein/: __init__.py  cli.py
ein.py/src/ein/cli/: __init__.py  __main__.py  _common.py  _factdump.py  ir.py  kb.py  lattice.py  profile.py  render.py  saturate.py  search.py  solve.py  symmetric.py
ein.py/src/ein/inference/: __init__.py  apriori.py  canon.py  closed.py  commitment.py  compile.py  config.py  contradiction.py  engine.py  firing.py  hrule.py  hypgen.py  lookahead.py  match.py  min_core.py  naf_deps.py  nogoods.py  predicates.py  primitives.py  resolve.py  saturator.py  solution.py  verdict.py  why.py
ein.py/src/ein/ir/: __init__.py  dump.py  grammar.lark  macros.py  parser.py  strings.py  types.py
ein.py/src/ein/kb/: __init__.py  entities.py  from_ir.py  imports.py  pattern.py  provenance.py  render.py  store.py  views.py
ein.py/src/ein/render/: __init__.py  dot_util.py  lattice_dag.py  palette.py  rules.py  slice.py
ein.py/src/ein/stdlib/: README.md  algebra.ein  bijection.ein  closure.ein  elim.ein  macro.ein  typing.ein
ein.py/src/ein/trace/: __init__.py  answer.py  ast.py  linearize.py  render.py
ein.py/src/ein_bot/: __init__.py  cli.py
ein.py/src/ein_bot/inference/: __init__.py  apriori.py  back_prop.py  canon.py  closed.py  commitment.py  compile.py  config.py  contradiction.py  engine.py  firing.py  hrule.py  hypgen.py  hypothesis.py  lookahead.py  match.py  min_core.py  naf_deps.py  nogoods.py  predicates.py  primitives.py  resolve.py  saturator.py  search_tree.py  solution.py  solver.py  state_dump.py  verdict.py  why.py
ein.py/src/ein_bot/ir/: __init__.py  ast.py  dump.py  grammar.lark  macros.py  strings.py  to_dot.py  types.py
ein.py/src/ein_bot/kb/: __init__.py  entities.py  from_ir.py  imports.py  pattern.py  provenance.py  render.py  store.py  views.py
ein.py/src/ein_bot/render/: __init__.py  constraints.py  dot_util.py  lattice_dag.py  palette.py  rules.py  slice.py
ein.py/src/ein_bot/stdlib/: README.md  algebra.ein  bijection.ein  closure.ein  elim.ein  macro.ein  typing.ein
ein.py/src/ein_bot/trace/: __init__.py  answer.py  ast.py  linearize.py  relevance.py  render.py
ein.py/tests/: test_bench_monotonic.py  test_cli.py  test_examples_load.py  test_ir_ast.py  test_ir_parser.py  test_ir_to_dot.py  test_lattice_cli.py  test_solve_cli.py  test_vscode_grammar.py
ein.py/tests/golden/: kb_zebra_unified.dot  trace_3step.md  zebra.golden  zebra2.golden
ein.py/tests/golden/dot/: ir_render_query.dot  ir_render_trace_a.dot  ir_render_trace_dag.dot  ir_to_dot_fact.dot  ir_to_dot_neg.dot  ir_to_dot_reasoning.dot  ir_to_dot_subtype.dot  ir_to_dot_type.dot  kb_provenance_dag.dot  kb_render_to_dot.dot  lattice_render.dot  render_constraints.dot  render_rule.dot  render_rules.dot  slice_render_slice.dot  slice_render_solution.dot  slice_render_state.dot
ein.py/tests/inference/: test_algebra.py  test_apriori.py  test_back_prop.py  test_branch_determinism.py  test_canonicalisation.py  test_closed.py  test_commitment.py  test_compile.py  test_config.py  test_consume_alive_cache.py  test_contradiction.py  test_converse_typecheck.py  test_d0_negative_completion.py  test_demos.py  test_dies_immediately.py  test_eager_root_bubble.py  test_engine.py  test_forall.py  test_guided_hypgen.py  test_hypgen_scoring.py  test_hypothesis.py  test_infer_closure.py  test_match.py  test_min_core.py  test_multi_assert.py  test_multilevel.py  test_naf_deps.py  test_open.py  test_path_condition_nogoods.py  test_predicates.py  test_reflective_rule.py  test_relation_algebra.py  test_rule_library.py  test_rules.py  test_saturator.py  test_saturator_fork_parity.py  test_saturator_naf.py  test_shuffle_invariance.py  test_state_dump.py  test_stdlib_bijection.py  (+6 more)
ein.py/tests/inference/lattice/: test_contradictions_backbone.py  test_gaps_backbone.py  test_lattice_dumper.py  test_lattice_fixtures.py  test_lattice_proof.py  test_lattice_public_contract.py  test_lattice_sanity.py  test_lattice_scoring.py  test_lattice_skeleton.py  test_p16_contract.py  test_shuffle_invariance.py
ein.py/tests/inference/monotonic/: test_monotonic_budget.py  test_monotonic_cdcl.py  test_monotonic_dumper.py  test_monotonic_parity.py  test_monotonic_skeleton.py
ein.py/tests/inference/tree/: test_back_prop.py  test_branch_determinism.py  test_canonicalisation.py  test_config.py  test_consume_alive_cache.py  test_d0_negative_completion.py  test_eager_root_bubble.py  test_hypgen_scoring.py  test_hypothesis.py  test_multilevel.py  test_path_condition_nogoods.py  test_shuffle_invariance.py  test_state_dump.py  test_unconditional_death.py
ein.py/tests/integration/: __init__.py  test_zebra_parse.py
ein.py/tests/ir/: test_macros.py
ein.py/tests/kb/: conftest.py  test_entities.py  test_imports.py  test_layers.py  test_provenance.py  test_render.py  test_store.py  test_store_indexing.py
ein.py/tests/render/: test_golden_dot.py  test_lattice_dag.py  test_rules_dot.py  test_slice_dot.py
ein.py/tests/trace/: test_answer.py  test_idea08_acceptance.py  test_render.py
files/: Makefile  (+4 more)
(+649 files in other folders)
