[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ein"
version = "0.0.1"
description = "Graph-based Zebra-puzzle reasoner — research / learn project"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Aleksei Gutikov", email = "gutikoff@gmail.com" }]
requires-python = ">=3.10"
keywords = ["zebra-puzzle", "graph", "constraint", "reasoning", "neuro-symbolic"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21",
    "lark>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "pytest-xdist>=3",  # parallel test execution: run_tests.sh -j N (pytest -n)
    "ruff>=0.4",
    "vulture>=2.11",    # dead-code finder; config in [tool.vulture] below
]

[project.scripts]
ein = "ein.cli:main"

[project.urls]
Repository = "https://github.com/agutikov/ein"

# ---------------------------------------------------------------------------
# Packaging
# ---------------------------------------------------------------------------

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ein.ir" = ["*.lark"]
"ein" = ["stdlib/*.ein", "stdlib/**/*.ein"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
filterwarnings = ["error"]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
extend-exclude = [
    "nlp",            # vendored submodule (link-grammar + scratch scripts)
    "smt",            # vendored submodule (CVC4 + scratch scripts)
    "docs",           # index / ideas / kernel notes (no lintable Python)
    "whitelist_vulture.py",  # vulture stub (bare names by design — not real code)
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "RUF",  # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802"]
# Lark Transformer methods must match the grammar's UPPERCASE terminal
# names (SYMBOL, VAR, KEYWORD, …) — the framework dispatches on name.
"src/ein/ir/ast.py" = ["N802"]
# `_loc()` returns `field(default=None, compare=False, hash=False,
# repr=False)` — calling it inline is the recommended dataclass-field
# helper idiom; ruff's RUF009 cannot tell `field()` apart from a real
# function call.
"src/ein/ir/types.py" = ["RUF009"]
# `∪` (set-union) is intentional mathematical notation in docstrings.
"src/ein/inference/nogoods.py" = ["RUF002"]

# ---------------------------------------------------------------------------
# vulture — dead-code finder.  Install: `pip install -e '.[dev]'`; run: `vulture`
# ---------------------------------------------------------------------------
#
# Scans src + tests together so a src symbol used only by a test is NOT
# reported dead (vulture flags names with zero references across every
# scanned path).  ruff already covers unused imports/locals (F401/F841);
# vulture adds unused module-level functions / classes / methods / attributes
# — the class that `committed_hypotheses` / `BOOKKEEPING_HEADS` fell into.
# (The former `demo/` scratch scripts were promoted into `src/ein/cli/` or
# moved to repo-root `utils/` in P1.11 S1.11.3; the CLI ones are covered by
# the `src` path, the utils ones live outside this package.)
#
# The first run surfaces false positives from dynamic dispatch (the Lark
# Transformer methods keyed on grammar terminals, the predicate registry,
# SolverConfig fields populated by reflection, pytest fixtures).  Seed a
# whitelist for them, then add it to `paths`:
#
#     vulture --make-whitelist src tests > whitelist_vulture.py
#
# For a no-install, zero-dependency first pass use utils/find_dead_defs.py.
[tool.vulture]
paths = ["src", "tests", "whitelist_vulture.py"]
min_confidence = 60
ignore_names = ["test_*", "Test*"]
ignore_decorators = ["@pytest.fixture", "@fixture"]
sort_by_size = true
